--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -11,6 +11,7 @@ on:
         description: Git Ref (Optional)
         required: false
       dry-run:
+        type: boolean
         description: Creates a draft release
         required: false
 
@@ -18,10 +19,6 @@ jobs:
   build-app:
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [14.x]
-        
     steps:
       - name: Clone Repository (Latest)
         uses: actions/checkout@v2
@@ -67,14 +64,17 @@ jobs:
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14
           cache: 'yarn'
 
       - name: Install deps
         run: yarn install
         
-      - name: Build app
-        run: yarn release
+      - name: Build/release Electron app
+        uses: samuelmeuli/action-electron-builder@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
           
       - name: Create release
         uses: softprops/action-gh-release@v1
