--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -76,6 +76,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          package_root: ./packages/cs-electron/
           
       - name: Create release
         uses: softprops/action-gh-release@v1
