--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -59,6 +59,8 @@ jobs:
           prev_release_sha=$(git rev-parse --short HEAD~$commit_count_diff)
           echo "PREV_RELEASE_SHA=$prev_release_sha" >> $GITHUB_ENV
           
+          echo $GITHUB_ENV
+          
           echo "COMMIT_LOGS<<{delimiter}
           $(curl -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/codescapes-io/codescapes/compare/$prev_release_sha...$current_sha" \
