--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -17,7 +17,7 @@ on:
 
 jobs:
   build-app:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     
     steps:
       - name: Clone Repository (Latest)
