--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -61,7 +61,7 @@ jobs:
           
           echo "COMMIT_LOGS<<{delimiter}
           $(curl -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/tachiyomiorg/tachiyomi/compare/$prev_release_sha...$current_sha" \
+            "https://api.github.com/repos/codescapes-io/codescapes/compare/$prev_release_sha...$current_sha" \
             | jq '[.commits[]|{message:(.commit.message | split("\n")), username:.author.login}]' \
             | jq -r '.[]|"- \(.message | first) (@\(.username))"')
           {delimiter}" >> $GITHUB_ENV
@@ -81,6 +81,22 @@ jobs:
           github_token: ${{ secrets.github_token }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
           package_root: ./packages/cs-electron/
+          
+      - name: Create release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: r${{ env.COMMIT_COUNT }}
+          name: Codescapes Preview r${{ env.COMMIT_COUNT }}
+          body: |
+            ### Commits
+            https://github.com/codescapes-io/codescapes/compare/${{ env.PREV_RELEASE_SHA }}...${{ env.CURRENT_SHA }}
+            ${{ env.COMMIT_LOGS }}
+            ---
+            
+          draft: ${{ github.event.inputs.dry-run != '' }}
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Prune old releases
         uses: dev-drprasad/delete-older-releases@v0.2.0
