--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -60,9 +60,9 @@ jobs:
           echo "PREV_RELEASE_SHA=$prev_release_sha" >> $GITHUB_ENV
           
           echo "COMMIT_LOGS<<{delimiter}
-          $(curl -H "Accept: application/vnd.github.v3+json" \n
-            "https://api.github.com/repos/codescapes-io/codescapes/compare/$prev_release_sha...$current_sha" \n
-            | jq '[.commits[]|{message:(.commit.message | split("\n")), username:.author.login}]' \n
+          $(curl -H "Accept: application/vnd.github.v3+json" ^
+            "https://api.github.com/repos/codescapes-io/codescapes/compare/$prev_release_sha...$current_sha" ^
+            | jq '[.commits[]|{message:(.commit.message | split("\n")), username:.author.login}]' ^
             | jq -r '.[]|"- \(.message | first) (@\(.username))"')
           {delimiter}" >> $GITHUB_ENV
           
