--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -3,7 +3,7 @@ name: Build job
 on:
   # Every Saturday at 21:00 UTC
   schedule:
-    - cron: '0 23 * * 0'
+    - cron: '0 23 * * *'
   # Manual triggers
   workflow_dispatch:
     inputs:
