--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -71,48 +71,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           package_root: ./packages/cs-electron/
-          args: -c.extraMetadata.version=r${{ env.COMMIT_COUNT }}
-          
-      - name: Clean up build artifacts
-        shell: bash
-        run: |
-          set -e
-          
-          cp packages/cs-electron/dist/Codescapes_win_x64-setup.exe Codescapes_win_x64-preview-r${{ env.COMMIT_COUNT }}-setup.exe
-          sha=`sha256sum Codescapes_win_x64-preview-r${{ env.COMMIT_COUNT }}-setup.exe | awk '{ print $1 }'`
-          echo "WIN_X64_SHA=$sha" >> $GITHUB_ENV
-          
-          cp packages/cs-electron/dist/Codescapes_win_x64-setup.exe.blockmap Codescapes_win_x64-preview-r${{ env.COMMIT_COUNT }}-setup.exe.blockmap
-          
-          cp packages/cs-electron/dist/latest.yml latest.yml
-
-      - name: Create release
-        uses: softprops/action-gh-release@v1
-        with:
-          tag_name: r${{ env.COMMIT_COUNT }}
-          name: Codescapes Preview r${{ env.COMMIT_COUNT }}
-          body: |
-            ### Commits
-            
-            https://github.com/codescapes-io/codescapes/compare/${{ env.PREV_RELEASE_SHA }}...${{ env.CURRENT_SHA }}
-            
-            ---
-            
-            ### Checksums
-            
-            | Variant | SHA-256 |
-            | ------- | ------- |
-            | x64 | ${{ env.WIN_X64_SHA }}
-          
-          files: |
-            Codescapes_win_x64-preview-r${{ env.COMMIT_COUNT }}-setup.exe
-            Codescapes_win_x64-preview-r${{ env.COMMIT_COUNT }}-setup.exe.blockmap
-            latest.yml
-            
-          draft: ${{ github.event.inputs.dry-run != '' }}
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          args: -p onTagOrDraft -c.buildVersion=r${{ env.COMMIT_COUNT }}
 
       - name: Prune old releases
         uses: dev-drprasad/delete-older-releases@v0.2.0
