--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -65,13 +65,18 @@ jobs:
 
       - name: Install deps
         run: yarn install --network-timeout 1000000
+        
+      - uses: felix-schaipp/add-release-channel@main
+        with:
+          releaseChannel: "pre-alpha"
+          buildNumber: ${{ env.COMMIT_COUNT }}
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
         with:
           github_token: ${{ secrets.github_token }}
           package_root: ./packages/cs-electron/
-          args: -p onTagOrDraft -c.buildVersion=r${{ env.COMMIT_COUNT }}
+          args: -p onTagOrDraft
 
       - name: Prune old releases
         uses: dev-drprasad/delete-older-releases@v0.2.0
