--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -62,8 +62,10 @@ jobs:
           prev_release_sha=$(git rev-parse --short HEAD~$commit_count_diff)
           echo "PREV_RELEASE_SHA=$prev_release_sha" >> $GITHUB_ENV
           
+          ssh-add ${{ secrets.PRIVATE_SSH_KEY }}
+          
           echo "COMMIT_LOGS<<{delimiter}
-          $(curl -H "Accept: application/vnd.github.v3+json" -H "sshkey: ${{ secrets.PRIVATE_SSH_KEY }}" \
+          $(curl -H "Accept: application/vnd.github.v3+json" \
             "https://api.github.com/repos/codescapes-io/codescapes/compare/$prev_release_sha...$current_sha" \
             | jq '[.commits[]|{message:(.commit.message | split("\n")), username:.author.login}]' \
             | jq -r '.[]|"- \(.message | first) (@\(.username))"')
