--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -65,7 +65,7 @@ jobs:
           ssh-add ${{ secrets.PRIVATE_SSH_KEY }}
           
           echo "COMMIT_LOGS<<{delimiter}
-          $(curl -H "Accept: application/vnd.github.v3+json" \
+          $(curl -H "Accept: application/vnd.github.v3+json" -H "Authorization: token ${{ secrets.PA_TOKEN }}" \
             "https://api.github.com/repos/codescapes-io/codescapes/compare/$prev_release_sha...$current_sha" \
             | jq '[.commits[]|{message:(.commit.message | split("\n")), username:.author.login}]' \
             | jq -r '.[]|"- \(.message | first) (@\(.username))"')
