--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -57,7 +57,7 @@ jobs:
           current_sha=$(git rev-parse --short HEAD)
           echo "CURRENT_SHA=$current_sha" >> $GITHUB_ENV
           
-          prev_commit_count=$(echo "${{ steps.last_release.outputs.tag_name }}" | cut -d'.' -f2 | sed -e "s/^r//")
+          prev_commit_count=$(echo "${{ steps.last_release.outputs.tag_name }}" | sed -e "s/^r//")
           commit_count_diff=$(expr $commit_count - $prev_commit_count)
           prev_release_sha=$(git rev-parse --short HEAD~$commit_count_diff)
           echo "PREV_RELEASE_SHA=$prev_release_sha" >> $GITHUB_ENV
@@ -81,14 +81,14 @@ jobs:
       - name: Build/release Electron app
         run: yarn release
         env:
-          CHANNEL: pre-alpha
+          CHANNEL: preview
           CI_PIPELINE_IID: ${{ env.COMMIT_COUNT }}
           
       - name: Create release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: pre-alpha.${{ env.COMMIT_COUNT }}
-          name: Codescapes pre-alpha.${{ env.COMMIT_COUNT }}
+          name: Codescapes Preview ${{ env.COMMIT_COUNT }}
           body: |
             ### Commits
             
