--- a/.github/workflows/build_app.yml
+++ b/.github/workflows/build_app.yml
@@ -81,6 +81,7 @@ jobs:
       - name: Build/release Electron app
         run: yarn release
         env:
+          GH_TOKEN: ${{ secrets.PA_TOKEN }}
           CHANNEL: preview
           CI_PIPELINE_IID: ${{ env.COMMIT_COUNT }}
           
